# srp

./: Cargo.toml  NOTES.md  README.md  bash.exe.stackdump  hello-020e.txt  hello-021d.txt  hello-034a0_00.txt  hello.md  localization-001b.txt  static_dictionary-001b.txt  static_dictionary-020e.txt
certs/: survarium_lobby_server.crt  survarium_lobby_server.dh512  survarium_lobby_server.key  survarium_login_server.crt  survarium_login_server.dh512  survarium_login_server.key
crates/foundation/: Cargo.toml
crates/foundation/src/: lib.rs
decompiler/lobby_client/: connect.cpp
decompiler/login_client_impl/: on_sign_in_answer_received.cpp
decompiler/network_client/: on_connected_to_login.cpp  tick.cpp
login-server/: Cargo.toml
login-server/src/: main.rs
resources/: static_dictionary-001b.txt  static_dictionary-021d.txt
resources/binary-config-examples/: db_static_dictionaries_034a0_00  default.lua  human_hit_params.options
resources/notes/: item_ids.md  restrictions.md
scripts/binary-config-parser/: Cargo.toml
scripts/binary-config-parser/src/: deserialize.rs  main.rs  serialize.rs  skills_tree.rs
scripts/db-static-dictionaries-parser/: Cargo.toml  db_static_dictionaries  survarium_identifiers.txt
scripts/db-static-dictionaries-parser/dicts/: ak_74u.options  ak_test.skeleton  db_static_dictionaries_020e  db_static_dictionaries_021d  localization  player_death.particle
scripts/db-static-dictionaries-parser/src/: datastruct.rs  main.rs  temt.rs
servers/browser-server/: Cargo.toml
servers/browser-server/src/: main.rs
servers/lobby-server/: Cargo.toml
servers/lobby-server/src/: lobby_server.rs  main.rs  messaging_server.rs  network_client.rs  profile_state.rs  state.rs
servers/lobby-server/src/lobby_server/: client_message.rs  mod.rs  player_profile.rs
servers/lobby-server/src/messaging_server/: mod.rs
servers/login-server/: Cargo.toml
servers/login-server/src/: main.rs
