[workspace]
members = [
  "crates/foundation",

  "servers/browser-server",
  "servers/lobby-server",
  "servers/login-server",

  "scripts/binary-config-parser",
]
exclude = []
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
actix-web = "4.10.2"
arrayref = "0.3.9"
crc32fast = "1.4.2"
encoding_rs = "0.8.35"
env_logger = "0.10"
log = "0.4"
num-derive = "0.4"
num-traits = "0.2"
openssl = "0.10"
serde_json = { version = "1.0.140", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }

foundation = { path = "crates/foundation" }

[workspace.lints.clippy]
