[package]
name = "binary-config-parser"
version.workspace = true
edition.workspace = true

[dependencies]
arrayref = { workspace = true }
crc32fast = { workspace = true }
encoding_rs = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
