[package]
name = "db-static-dictionaries-parser"
version.workspace = true
edition.workspace = true

[dependencies]
arrayref = { workspace = true }
crc32fast = { workspace = true }
encoding_rs = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }

[lints]
workspace = true
