[package]
name = "db-static-dictionaries-parser"
version.workspace = true
edition.workspace = true

[dependencies]
arrayref = { workspace = true }
crc32fast = { workspace = true }
encoding_rs = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde_json = { version = "1.0.140", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }

[lints]
workspace = true
