[package]
name = "browser-server"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
default = []

[dependencies]
actix-web = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }

foundation = { workspace = true }
